# trading-agent

./: .env.example  .gitignore  README.md  WORKPLAN.md  pyproject.toml
config/: config.yaml  keywords.yaml  portfolio.yaml
docs/: akshare-guide.md  business-flow-v2.md  business-flow.md  invest-assistant-architecture.md  invest-assistant-design.md  invest-assistant-tech.md
src/trading_agent/: __init__.py  main.py  scheduler.py
src/trading_agent/data_sources/: __init__.py  aggregator.py  akshare_data.py  trendradar.py
src/trading_agent/graph/: __init__.py  state.py  workflow.py
src/trading_agent/graph/nodes/: __init__.py  aggregator.py  data_analyst.py  debater.py  due_diligence.py  fund_analyst.py  init.py  judge.py  position_advisor.py  push.py  screener.py  tech_analyst.py
src/trading_agent/utils/: __init__.py  config.py  logger.py
tests/: test_akshare.py  test_screener.py  test_workflow.py
